# qem-simplifier

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
docs/: 接入指南.md  数据结构标准.md
include/: qem_simplifier.h
plugins/QEMLevelSceneSimplifier/: .gitignore  QEMLevelSceneSimplifier.uplugin
plugins/QEMLevelSceneSimplifier/Source/QEMLevelSceneSimplifier/: QEMLevelSceneSimplifier.Build.cs
plugins/QEMLevelSceneSimplifier/Source/QEMLevelSceneSimplifier/Private/: QEMLevelSceneSimplifierModule.cpp
plugins/QEMLevelSceneSimplifier/Source/QEMLevelSceneSimplifier/Public/: QEMLevelSceneSimplifierModule.h
plugins/QEMMeshReduction/: QEMMeshReduction.uplugin
plugins/QEMMeshReduction/Config/: FilterPlugin.ini
plugins/QEMMeshReduction/Source/QEMMeshReduction/: QEMMeshReduction.Build.cs
plugins/QEMMeshReduction/Source/QEMMeshReduction/Private/: QEMMeshReduction.cpp
plugins/QEMMeshReduction/Source/QEMMeshReduction/Public/: QEMMeshReduction.h
src/: binary_heap.rs  disjoint_set.rs  hash.rs  lib.rs  main.rs  math_util.rs  quadric.rs  scene.rs  simplifier.rs
src/cli/: mod.rs  model.rs  progress.rs  scene.rs
src/math/: jacobi_svd.rs  lup.rs  mod.rs  pseudo.rs
src/util/: binary_heap.rs  disjoint_set.rs  hash.rs  mod.rs
