[package]
name = "qem-simplifier"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "qem-cli"
path = "src/main.rs"

[features]
default = ["weight_by_area"]
weight_by_area = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tobj = "4.0"
gltf = "1.4"
glam = "0.29"
byteorder = "1.5"
rayon = "1.10"
ufbx = "0.10.1"
gltf-json = "1.4.1"
bytemuck = "1.25.0"
indicatif = "0.17"

[build-dependencies]
cbindgen = "0.26"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
