[package]
name = "qem-simplifier"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "qem-cli"
path = "src/main.rs"

[features]
default = ["weight_by_area"]
weight_by_area = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tobj = "4.0"
gltf = "1.4"
glam = "0.29"
byteorder = "1.5"
rayon = "1.10"
gltf-json = "1.4.1"
bytemuck = "1.25.0"
indicatif = "0.17"
console = "0.15"
supports-unicode = "3.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[build-dependencies]
cbindgen = "0.26"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
